  no-ops. Documentation, examples, and Fortran/C headers were updated to
  reflect these changes. Horner evaluation now supports any `upsampfac`.
  (Barbone, #760)
* Added bounds checks for CUDA method 3 to prevent segfault in single-precision
  when the dimension is >= 1e8 (Barbone #802)
* Fixed memory leak in python bindings due to storing input references for too long.
  (Barbone #804)

V 2.4.1 7/8/25

* Update Python cufinufft unit tests to use complex dtypes (Andén, #705).
* Python version of 2D Poisson solve tutorial (Julius Herb, #700).
* Cached the optimal thread number (# physical cores) to reduce system call
  overhead in repeated small transforms (YuWei-CH, #697, fixing #693).
* Adding OutputDriven parallelism to cufinufft (Barbone)
* replaced LGPL-licensed Gauss-Legendre quadrature code by Apache2-licensed
  code adapted from Jason Kaye's cppdlr. CPU and GPU. PR #692 (Barnett).
* Fix cufinufft importing bug found by @fzimmermann89 (Barbone, issue #707, PR #708)
* Python simple interface for CUDA type 3 (Maxim Ermenko, #685)

V 2.4.0 (5/27/25)

* slight accuracy improvements for small N by use of ceil in nf choice
  (Barbone & Barnett a0bde26).
* PR #662 (Barbone):
  Direct calc (dirft) templated, norms computed by hand in tests, to remove
  finufft dependency for cufinufft math tests.
  Aligned cufinufft tests with finufft tests to test entire transform output.
  Fix timing tests so that setpts no longer included in H2D transfer.
* Found and fixed obscure off-by-one bug in cufinufft that could result in
  decreased accuracy or undefined output. The bug has been present since 2019
  (!) but was very hard to trigger, requiring a NU pt to fall on a gridpoint to
  float accuracy, causing ns+1 instead of ns kerval elements to be accessed
  in spreadinterp. Prior to summer v2.3 this could only error if ns=16;
  it became more likely in v2.3 due to shortening kerval cuda arrays to ns.
  Introduction of type 3 on GPU triggered it more often due to alignment of